# W16Engine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Instructions.txt  LICENSE.md  README.md  vcpkg.json
source/: Camera.cpp  Camera.h  Editor.cpp  Editor.h  Engine.cpp  Engine.h  Event.h  EventListener.h  EventSystem.cpp  EventSystem.h  GameObject.cpp  GameObject.h  Global.h  Input.cpp  Input.h  Interface.cpp  Interface.h  Loader.cpp  Loader.h  Log.cpp  Log.h  Module.h  OpenGL.cpp  OpenGL.h  Render.cpp  Render.h  Scene.cpp  Scene.h  Timer.h  Vector2D.cpp  Vector2D.h  Window.cpp  Window.h  application.cpp
source/components/: Component.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
source/geometry/: Plane.cpp  Plane.h
source/utils/: AABB.h  Frustum.cpp  Frustum.h  Log.cpp  Ray.cpp  Ray.h  Timer.cpp  Tree.cpp  Tree.h
source/windows/: AboutWindow.cpp  AboutWindow.h  ConfigWindow.cpp  ConfigWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  UIWindow.h
